--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <tr>
                 <td align="center"><a href="https://github.com/Luv-valecha/Network_Intrusion">Code</a> | <a
                         href="https://www.kaggle.com/datasets/sampadab17/network-intrusion-detection?select=Train_data.csv">Dataset</a>
-                    | <a href="./resources/CSTBIR-AAAI24Slides.pdf">Slides</a> | <a
+                    | <a href="https://docs.google.com/presentation/d/1xggtss0QPulhdF1vYawYsD-7vs-t3iVc/edit?usp=sharing&ouid=102848302874725388051&rtpof=true&sd=true">Slides</a> | <a
                         href="https://www.youtube.com/watch?v=M8JcMv7Rznw">Short Talk</a></td>
             </tr>
         </tbody>
