--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <td align="center"><a href="https://github.com/Luv-valecha/Network_Intrusion">Code</a> | <a
                         href="https://www.kaggle.com/datasets/sampadab17/network-intrusion-detection?select=Train_data.csv">Dataset</a>
                     | <a href="https://docs.google.com/presentation/d/1xggtss0QPulhdF1vYawYsD-7vs-t3iVc/edit?usp=sharing&ouid=102848302874725388051&rtpof=true&sd=true">Slides</a> | <a
-                        href="https://www.youtube.com/watch?v=M8JcMv7Rznw">Short Talk</a></td>
+                        href="https://www.youtube.com/watch?v=IDEWjUkJ_ag">Short Talk</a></td>
             </tr>
         </tbody>
     </table>
@@ -305,7 +305,7 @@
                                 <div class="card">
                                     <div class="card-body text-center card-no-padding">
                                         <p><img class=" img-fluid"
-                                                src="https://th.bing.com/th/id/OIP.fP3buJnoc_iLv_xgVJEZLwHaHa?pid=ImgDet&amp;w=204&amp;h=204&amp;c=7"
+                                                src="https://th.bing.com/th/id/OIP.qPEECK0_UXP4TkYFCyfQrQHaGh?rs=1&pid=ImgDetMain"
                                                 alt="card image"></p>
                                         <h5 class="card-title">Shiv Jee <br> Yadav</h5>
                                         <ul class="list-inline">
@@ -336,7 +336,7 @@
                                 <div class="card">
                                     <div class="card-body text-center card-no-padding">
                                         <p><img class=" img-fluid"
-                                                src="https://th.bing.com/th/id/OIP.fP3buJnoc_iLv_xgVJEZLwHaHa?pid=ImgDet&amp;w=204&amp;h=204&amp;c=7"
+                                                src="https://th.bing.com/th/id/OIP.qPEECK0_UXP4TkYFCyfQrQHaGh?rs=1&pid=ImgDetMain"
                                                 alt="card image"></p>
                                         <h5 class="card-title">Ritik <br> Nagar</h5>
                                         <ul class="list-inline">
@@ -367,7 +367,7 @@
                                 <div class="card">
                                     <div class="card-body text-center card-no-padding">
                                         <p><img class=" img-fluid"
-                                                src="https://th.bing.com/th/id/OIP.fP3buJnoc_iLv_xgVJEZLwHaHa?pid=ImgDet&amp;w=204&amp;h=204&amp;c=7"
+                                                src="https://th.bing.com/th/id/OIP.qPEECK0_UXP4TkYFCyfQrQHaGh?rs=1&pid=ImgDetMain"
                                                 alt="card image"></p>
                                         <h5 class="card-title">Pratyush <br> Chauhan</h5>
                                         <ul class="list-inline">
@@ -398,7 +398,7 @@
                                 <div class="card">
                                     <div class="card-body text-center card-no-padding">
                                         <p><img class=" img-fluid"
-                                                src="https://th.bing.com/th/id/OIP.fP3buJnoc_iLv_xgVJEZLwHaHa?pid=ImgDet&amp;w=204&amp;h=204&amp;c=7"
+                                                src="https://th.bing.com/th/id/OIP.qPEECK0_UXP4TkYFCyfQrQHaGh?rs=1&pid=ImgDetMain"
                                                 alt="card image"></p>
                                         <h5 class="card-title">Dheeraj <br> Kumar</h5>
                                         <ul class="list-inline">
@@ -429,7 +429,7 @@
                                 <div class="card">
                                     <div class="card-body text-center card-no-padding">
                                         <p><img class=" img-fluid"
-                                                src="https://th.bing.com/th/id/OIP.fP3buJnoc_iLv_xgVJEZLwHaHa?pid=ImgDet&amp;w=204&amp;h=204&amp;c=7"
+                                                src="https://th.bing.com/th/id/OIP.qPEECK0_UXP4TkYFCyfQrQHaGh?rs=1&pid=ImgDetMain"
                                                 alt="card image"></p>
                                         <h5 class="card-title">Dhruv <br> Sharma</h5>
                                         <ul class="list-inline">
