--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                         <h5 class="card-title">Shiv Jee <br> Yadav</h5>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <a class="social-icon text-xs-center" target="_blank" href="https://in.linkedin.com/in/shiv-yadav-ba3547284">
                                                     <i class="fa fa-linkedin"></i>
                                                 </a>
                                             </li>
@@ -341,7 +341,7 @@
                                         <h5 class="card-title">Ritik <br> Nagar</h5>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <a class="social-icon text-xs-center" target="_blank" href="https://in.linkedin.com/in/ritik-nagar-1375591b5?">
                                                     <i class="fa fa-linkedin"></i>
                                                 </a>
                                             </li>
@@ -372,7 +372,7 @@
                                         <h5 class="card-title">Pratyush <br> Chauhan</h5>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <a class="social-icon text-xs-center" target="_blank" href="https://in.linkedin.com/in/pratyush-chauhan-a992a6288">
                                                     <i class="fa fa-linkedin"></i>
                                                 </a>
                                             </li>
@@ -403,7 +403,7 @@
                                         <h5 class="card-title">Dheeraj <br> Kumar</h5>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <a class="social-icon text-xs-center" target="_blank" href="https://in.linkedin.com/in/dheeraj-kumar-34222828a">
                                                     <i class="fa fa-linkedin"></i>
                                                 </a>
                                             </li>
@@ -478,8 +478,8 @@
                     <p class="section">&nbsp;</p>
                     <div class="contact">
                         <p class="section" id="related-paper"><b>Contact</b></p>
-                        For questions, please contact <a href="https://github.com/ShivJee-Yadav" target="_blank">Shiv
-                            Jee Yadav</a> or raise an issue on <a class="publink" href="https://github.com/vl2g/CSTBIR"
+                        For questions, please contact <a href="https://in.linkedin.com/in/shiv-yadav-ba3547284" target="_blank">Shiv
+                            Jee Yadav</a> or raise an issue on <a class="publink" href="https://github.com/ShivJee-Yadav"
                             target="_blank" style="text-decoration: none">GitHub</a>.
                     </div>
                     <p class="section"></p>
