--- a/index.html
+++ b/index.html
@@ -428,14 +428,21 @@
                             <div class="mainflip">
                                 <div class="card">
                                     <div class="card-body text-center card-no-padding">
-                                        <p><img class=" img-fluid"
-                                                src="https://th.bing.com/th/id/OIP.qPEECK0_UXP4TkYFCyfQrQHaGh?rs=1&pid=ImgDetMain"
-                                                alt="card image"></p>
+                                        <p>
+                                            <img class="img-fluid"
+                                                 src="frontend2\Network_intrusion\public\dhruv_1.jpg"
+                                                 alt="card image">
+                                        </p>
                                         <h5 class="card-title">Dhruv <br> Sharma</h5>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="#">
+                                                <a class="social-icon text-xs-center" target="_blank" href="https://in.linkedin.com/in/dhruv-sharma-0668b028a">
                                                     <i class="fa fa-linkedin"></i>
+                                                </a>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <a class="social-icon text-xs-center" target="_blank" href="https://github.com/Dhruv0427">
+                                                    <i class="fa fa-github"></i>
                                                 </a>
                                             </li>
                                             <li class="list-inline-item">
@@ -443,18 +450,12 @@
                                                     <i class="fa fa-user"></i>
                                                 </a>
                                             </li>
-                                            <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank"
-                                                    href="https://github.com/Luv-valecha/Network_Intrusion">
-                                                    <i class="fa fa-github"></i>
-                                                </a>
-                                            </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        
                     <p class="section">&nbsp;</p>
 
                     <p class="section">&nbsp;</p>
